@@ -1,6 +1,11 @@
 2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* WalkViewer.wrl:
+	* Billboard110.wrl: 
+
+2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* WalkViewer.wrl:
 	* BrowserOptions.wrl: 
 
 2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>
